--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "datr",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
-    },
-    {
-        "key": "locale",
-        "value": "pa_IN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723178283",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "c_user",
@@ -86,43 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
-    },
-    {
-        "key": "xs",
-        "value": "11%3AkQRrVvVVzVhogA%3A2%3A1723178612%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
-    },
-    {
-        "key": "fr",
-        "value": "1lGW4rgYOa4ruQMAE.AWVzUaqn2YdcfouE8ySaRqb41Fg.BmtQoC..AAA.0.0.BmtZ52.AWW_IM2TGvQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723178697111%2C%22v%22%3A1%7D",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723178921311%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
+    },
+    {
+        "key": "fr",
+        "value": "1mzYng5FcqLoQabDD.AWXt1oM_4BN7_M0K1Jqsd7R4MJA.BmtZ-q..AAA.0.0.BmtZ-q.AWWADLkhU8A",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
+    },
+    {
+        "key": "xs",
+        "value": "11%3AkQRrVvVVzVhogA%3A2%3A1723178612%3A-1%3A-1%3A%3AAcVCrqAyM6-sMMLx2MOfIuPF4RYkUVlZ-3NiJzxKhw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     },
     {
         "key": "wd",
-        "value": "1060x2084",
+        "value": "389x765",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:45:12.068Z",
-        "lastAccessed": "2024-08-09T04:45:12.068Z"
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100734944%3BT%3A28719649",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723178942",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:49:20.547Z",
+        "lastAccessed": "2024-08-09T04:49:20.547Z"
     }
 ]
