--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "datr",
@@ -59,79 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
-        "key": "c_user",
-        "value": "61564107626890",
+        "key": "m_pixel_ratio",
+        "value": "2.518298864364624",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723178921311%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
-    },
-    {
-        "key": "fr",
-        "value": "1mzYng5FcqLoQabDD.AWXt1oM_4BN7_M0K1Jqsd7R4MJA.BmtZ-q..AAA.0.0.BmtZ-q.AWWADLkhU8A",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
-    },
-    {
-        "key": "xs",
-        "value": "11%3AkQRrVvVVzVhogA%3A2%3A1723178612%3A-1%3A-1%3A%3AAcVCrqAyM6-sMMLx2MOfIuPF4RYkUVlZ-3NiJzxKhw",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "wd",
-        "value": "389x765",
+        "value": "429x843",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562963472651",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
+    },
+    {
+        "key": "fr",
+        "value": "1ej54FpXFVY03frXZ.AWVVnIGUevGxvJwHUxe--bG7BFc.BmtbD0..AAA.0.0.BmtbET.AWVPcjogelY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
+    },
+    {
+        "key": "xs",
+        "value": "6%3AU02Prn_u6ayVYw%3A2%3A1723183380%3A-1%3A14749",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
+    },
+    {
+        "key": "locale",
+        "value": "pa_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "fbl_st",
-        "value": "100734944%3BT%3A28719649",
+        "value": "101234150%3BT%3A28719723",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723178942",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723183382",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-09T04:49:20.547Z",
-        "lastAccessed": "2024-08-09T04:49:20.547Z"
+        "creation": "2024-08-09T06:03:12.252Z",
+        "lastAccessed": "2024-08-09T06:03:12.252Z"
     }
 ]
