--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.014Z",
-        "lastAccessed": "2024-08-12T04:37:55.014Z"
+        "creation": "2024-08-12T04:42:31.681Z",
+        "lastAccessed": "2024-08-12T04:42:31.681Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "locale",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2587%3Btimestamp%3A1723374642",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "wd",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "c_user",
@@ -104,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     },
     {
         "key": "xs",
@@ -113,7 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:37:55.015Z",
-        "lastAccessed": "2024-08-12T04:37:55.015Z"
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61564107626890",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100738049%3BT%3A28723961",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723437712",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T04:42:31.682Z",
+        "lastAccessed": "2024-08-12T04:42:31.682Z"
     }
 ]
